// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders the Danger type 1`] = `
<button
  className="Button Danger"
>
  Cancel
</button>
`;

exports[`<Button> renders the same output 1`] = `
<button
  className="Button Success"
>
  Click me
</button>
`;
